--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,6 @@ services:
     container_name: psql
     image: postgres:13-alpine
     volumes:
-      - /data/postgres/data:/var/lib/postgresql/data/
+      - ./data/postgres/data:/var/lib/postgresql/data/
     env_file:
       - ./dotenv_files/.env
